syntax = "proto3";
package proto;
option go_package = "github.com/sepulchrestudios/go-service/proto";

import "google/api/annotations.proto";

message LivenessRequest {}

message LivenessResponse {
   string message = 1;
}

message ReadinessRequest {}

message ReadinessResponse {
   string message = 1;
}

service LivenessService {
   rpc Live(LivenessRequest) returns (LivenessResponse) {
      option (google.api.http) = {
         get: "/health/live"
      };
   }
   rpc Ready(ReadinessRequest) returns (ReadinessResponse) {
      option (google.api.http) = {
         get: "/health/ready"
      };
   }
}